# MP-SPDZ

./: dotswrapper.sh
BMR/: Party.cpp  RealProgramParty.hpp
ECDSA/: fake-spdz-ecdsa-party.cpp  ot-ecdsa-party.hpp
FHEOffline/: PairwiseMachine.cpp  SimpleGenerator.h  SimpleMachine.cpp  SimpleMachine.h
GC/: Machine.h  Machine.hpp  ShareParty.hpp  Thread.hpp  ThreadMaster.hpp
Machines/: TripleMachine.cpp  emulate.cpp
Networking/: DotsPlayer.cpp  DotsPlayer.h  Player.cpp  Player.h
Processor/: Machine.h  Machine.hpp  Online-Thread.hpp  OnlineMachine.h  OnlineMachine.hpp  Processor.hpp  ProcessorBase.cpp  ProcessorBase.h  ProcessorBase.hpp
Programs/Source/: 294.mpc  prf_mimc.mpc
Protocols/: ChaiGearPrep.hpp  CowGearPrep.hpp  HemiPrep.hpp  SohoPrep.hpp  TemiPrep.hpp
Scripts/: sy-shamir.sh
Utils/: spdz2-offline.cpp
client/: Cargo.toml  go.mod  go.sum  main.go
client/src/: main.rs
