[package]
name = "mpspdz-dots-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotspb = "0.4.0"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
uuid = { version = "1.3.2", features = ["v4"] }
